ansible-playbook/kubernetes/roles/master/files/mongo/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: iris-ws
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: iris-ws
spec:
  ports:
    - protocol: "TCP"
      port: 27017       
      targetPort: 27017   
  selector:
    app: mongodb
