ansible-playbook/kubernetes/roles/master/files/mongo/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: iris-ws
spec:
  rules:
  - host: mongo-express.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: mongo-express-internal-service
            port:
              number: 8081
